i create form.py file and create SavingForm class in form.py file

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -19,7 +19,7 @@
         }
         td a{
             text-decoration: none;
-            color: dodgerblue;
+            color:red;
         }
     </style>
 </head>
