--- a/app/templates/app/add_or_update_savings.html
+++ b/app/templates/app/add_or_update_savings.html
@@ -1,11 +1,13 @@
 {{member.name}}
 <table>
-<form action="{% url 'app:add_or_update_savings' member.id %}" method="POST">
+<form action="{% url 'app:save' member.id %}" method="POST">
    {% csrf_token %}
     <tr>
         {{form.as_table}}
     </tr>
         <tr>
+            <input type="hidden" name="month" value="{{month}}">
+            <input type="hidden" name="year" value="{{year}}">
            <td> <input type="submit" value="ചേർക്കുക"></td>
         </tr>
     
