--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INDEX</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <style>
         table{
             border-collapse: collapse;
@@ -24,33 +28,59 @@
     </style>
 </head>
 <body>
-    <table border="1">
-       <thead>
-           <th>
-            ക്രമ നമ്പർ 
-           </th>
-           <th>
-            അംഗത്തിന്റെ പേര്
-           </th>
-           <th>
-            അംഗത്വ നമ്പർ   
-           </th>
-           <th>
-            അംഗത്വം നൽകിയ തീയതി 
-           </th>
-           <th>
-            വിഭാഗം 
-           </th>
-       </thead>
-       <tbody>
-           
-           {% for member in members %}
-           <tr>
-           <td>{{forloop.counter}}</td><td><a href="{% url 'app:select_month_and_year' member.id %}">{{member.name}}</a></td><td>{{member.member_number}}</td><td>{{member.date_of_membership}}</td><td>{{member.category}}</td>
-        </tr>
-           {% endfor %}
+    <table class="table table-dark table-striped">
         
-       </tbody>
-    </table>
+            <thead>
+              <tr>
+                <th scope="col">ക്രമ നമ്പർ </th>
+                <th scope="col">അംഗത്തിന്റെ പേര്</th>
+                <th scope="col">അംഗത്വ നമ്പർ</th>
+                <th scope="col">അംഗത്വം നൽകിയ തീയതി</th>
+                <th scope="col">വിഭാഗം</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for member in members %}
+              <tr>
+                <th scope="row">{{forloop.counter}}</th>
+                <td><a href="{% url 'app:select_month_and_year' member.id %}">{{member.name}}</a></td>
+                <td>{{member.member_number}}</td>
+                <td>{{member.date_of_membership}}</td>
+                <td>{{member.category}}</td>
+              </tr>
+            {% endfor %}
+            </tbody>
+         
+      </table>
+      
 </body>
 </html>
+
+<!-- <table border="1">
+    <thead>
+        <th>
+         ക്രമ നമ്പർ 
+        </th>
+        <th>
+         അംഗത്തിന്റെ പേര്
+        </th>
+        <th>
+         അംഗത്വ നമ്പർ   
+        </th>
+        <th>
+         അംഗത്വം നൽകിയ തീയതി 
+        </th>
+        <th>
+         വിഭാഗം 
+        </th>
+    </thead>
+    <tbody>
+        
+        {% for member in members %}
+        <tr>
+        <td>{{forloop.counter}}</td><td><a href="{% url 'app:select_month_and_year' member.id %}">{{member.name}}</a></td><td>{{member.member_number}}</td><td>{{member.date_of_membership}}</td><td>{{member.category}}</td>
+     </tr>
+        {% endfor %}
+     
+    </tbody>
+ </table> -->
