--- a/app/templates/app/add_or_update_savings.html
+++ b/app/templates/app/add_or_update_savings.html
@@ -1,15 +1,117 @@
-{{member.name}}
-<table>
+{% extends 'app/main.html' %}
+{% load static %}
+{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>addorapdate</title>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <style>
+       
+    form{
+        width: 100%;
+       
+        padding: 50px;
+        background: #E81C2E;
+        border-radius: 5px;
+        margin-top: 50px;;
+       
+       
+        /* position: absolute; */
+      
+       
+  
+
+    }
+
+        td{
+            padding: 5px;
+            width:400px
+        }
+        table{
+            width: 100%;
+        background: #E81C2E;
+        border-radius: 5px;
+    }
+    .form-control{
+
+height: 45px;
+color: #ffffff;
+padding: 0 15px;
+border-radius: 5px;
+border: 1px solid #ffffff;
+background: transparent;
+    }
+
+    :-ms-input-placeholder {
+   color: rgb(255, 255, 255);
+}
+
+.button{
+    padding: 10px 30px 12px 30px;
+    text-align: center; 
+    font-size: 16px;
+    font-weight: 500;
+    color: #E81C2E;
+    background: #202C45;
+    border: none;
+    border-radius: 60px;
+    box-shadow: inset 0 0 0 0 #202C45;
+    transition: ease-out 0.6s;
+    -webkit-transition: ease-out 0.6s;
+    -moz-transition: ease-out 0.6s;
+    width: 100%
+} 
+.button:hover{
+    color: #202C45;
+    background: #ffffff;
+    box-shadow: inset 100% 0 0 0 #202C45;
+
+}
+    </style>
+</head>
+<body style="background-color: #E81C2E;">
+<center>
+    
+
 <form action="{% url 'app:save' member.id %}" method="POST">
    {% csrf_token %}
+   
+   <table>
+       <tr>
+           <td><h3 style="color: white;text-align: center;">{{member.name}}</h3></td>
+       </tr>
     <tr>
-        {{form.as_table}}
+        <td>{{form.first_weak}}</td>
+    </tr>
+    <tr>
+        <td>{{form.second_weak}}</td>
+    </tr>
+    <tr>
+        <td>{{form.third_weak}}</td>
+    </tr>
+    <tr>
+        <td>{{form.fourth_weak}}</td>
+    </tr>
+    <tr>
+        <td>{{form.fifth_weak}}</td>
     </tr>
         <tr>
             <input type="hidden" name="month" value="{{month}}">
             <input type="hidden" name="year" value="{{year}}">
-           <td> <input type="submit" value="ചേർക്കുക"></td>
+            
+             <div>  
+            <td><button class="button" type="submit">Send Request</button></td>
+             </div> 
+           <!-- <td> <input class="button" type="submit" value="ചേർക്കുക" style="float: right;"></td> -->
         </tr>
-    
+    </table>  
 </form>
-</table>
+
+</body>
+</center>
+</html>
+{% endblock content %}
