--- a/app/templates/app/savings_of_intended_month.html
+++ b/app/templates/app/savings_of_intended_month.html
@@ -1,39 +1,112 @@
-
-
-<form action="{% url 'app:savings_of_intended_month'%}" method="POST">
-    {% csrf_token %}
-    <table>
-        <tr>
-            <select id="month" name="month" style="width:150px">
-                <option value="January">January</option>
-                <option value="February">February</option>
-                <option value="March">March</option>
-                <option value="April">April</option>
-                <option value="May">May</option>
-                <option value="June">June</option>
-                <option value="July">July</option>
-                <option value="August">August</option>
-                <option value="September">September</option>
-                <option value="October">October</option>
-                <option value="November">November</option>
-                <option value="December">December</option>
-
-              </select>
-            <!-- <td>Month</td><td><input type="text" name="month"></td> -->
-        </tr>
-        <br><br>
-        <tr>
-            <select id="year" name="year" style="width:150px">
-                {% for year in range %}
-                <option value="{{year}}">{{year}}</option>
-                {% endfor %}
-              </select>
-            <!-- <td>year</td><td><input type="text" name="year"></td> -->
-        </tr>
-        <br><br>
-        <tr>
+{% extends 'app/main.html' %}
+{% load static %}
+{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .location-form{
+        
+        left: 50%;
+       
+        width: 100%;
+      
+        margin-top: 10%;
+       
+        }
+        td{padding:15px;}
+    
+        form{
+            width: 100%;
+            position: relative;
+            padding: 50px 50px;
+            background: #E81C2E;
+            border-radius: 5px;
+           
+           
+            /* position: absolute; */
+          
+           
+      
+    
+        }
+        .form-control{
+    
+            height: 45px;
+        color: #ffffff;
+        padding: 0 15px;
+        border-radius: 5px;
+        border: 1px solid #ffffff;
+        background: transparent;
+        }
+        table{
+            width: 100%;
+        }
+        .button{
+        padding: 10px 30px 12px 30px;
+        text-align: center; 
+        font-size: 16px;
+        font-weight: 500;
+        color: #E81C2E;
+        background: #202C45;
+        border: none;
+        border-radius: 60px;
+        box-shadow: inset 0 0 0 0 #202C45;
+        transition: ease-out 0.6s;
+        -webkit-transition: ease-out 0.6s;
+        -moz-transition: ease-out 0.6s;
+        width: 100%
+    } 
+    .button:hover{
+        color: #202C45;
+        background: #ffffff;
+        box-shadow: inset 100% 0 0 0 #202C45;
+    
+    }
+        </style>
+</head>
+<body style="background-color: #E81C2E;">
+    <form action="{% url 'app:savings_of_intended_month'%}" method="POST">
+        {% csrf_token %}
+        <table>
+            <tr>
+                <td><select id="month" name="month" class="form-control">
+                    <option value="January">January</option>
+                    <option value="February">February</option>
+                    <option value="March">March</option>
+                    <option value="April">April</option>
+                    <option value="May">May</option>
+                    <option value="June">June</option>
+                    <option value="July">July</option>
+                    <option value="August">August</option>
+                    <option value="September">September</option>
+                    <option value="October">October</option>
+                    <option value="November">November</option>
+                    <option value="December">December</option>
+    
+                  </select></td>
+                <!-- <td>Month</td><td><input type="text" name="month"></td> -->
+            </tr>
             
-            <td><input type="submit"></td>
-        </tr>
-    </table>
-</form>
+            <tr>
+               <td> <select id="year" name="year" class="form-control">
+                    {% for year in range %}
+                    <option value="{{year}}">{{year}}</option>
+                    {% endfor %}
+                  </select></td>
+                <!-- <td>year</td><td><input type="text" name="year"></td> -->
+            </tr>
+           
+            <tr>
+                
+                <td><input type="submit" class="button"></td>
+            </tr>
+        </table>
+    </form>
+</body>
+</html>
+{% endblock content %}
