--- a/app/templates/app/select_month_and_year.html
+++ b/app/templates/app/select_month_and_year.html
@@ -1,6 +1,115 @@
-<h1>{{member.name}}</h1>
+{% extends 'app/main.html' %}
+{% load static %}
+
+{% block content %}
+<head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+<style>
+    .location-form{
+    
+    left: 50%;
+   
+    width: 100%;
+  
+    margin-top: 10%;
+   
+    }
+
+    form{
+        width: 100%;
+        position: relative;
+        padding: 50px 50px;
+        background: #E81C2E;
+        border-radius: 5px;
+       
+       
+        /* position: absolute; */
+      
+       
+  
+
+    }
+    .form-control{
+
+        height: 45px;
+    color: #ffffff;
+    padding: 0 15px;
+    border-radius: 5px;
+    border: 1px solid #ffffff;
+    background: transparent;
+    }
+    table{
+        width: 100%;
+    }
+    .button{
+    padding: 10px 30px 12px 30px;
+    text-align: center; 
+    font-size: 16px;
+    font-weight: 500;
+    color: #E81C2E;
+    background: #202C45;
+    border: none;
+    border-radius: 60px;
+    box-shadow: inset 0 0 0 0 #202C45;
+    transition: ease-out 0.6s;
+    -webkit-transition: ease-out 0.6s;
+    -moz-transition: ease-out 0.6s;
+    width: 100%
+} 
+.button:hover{
+    color: #202C45;
+    background: #ffffff;
+    box-shadow: inset 100% 0 0 0 #202C45;
+
+}
+    </style>
+ </head>
+ <body  style="background-color:#E81C2E ;">
+     
 
 <form action="{% url 'app:add_or_update_savings' member.id %}" method="POST">
+    {% csrf_token %}
+    <h3 style="color: #ffffff;text-align: center;" >{{member.name}}</h3>
+    <table>
+       
+        <tr>
+            <select id="month" name="month" class="form-control">
+                <option value="January">January</option>
+                <option value="February">February</option>
+                <option value="March">March</option>
+                <option value="April">April</option>
+                <option value="May">May</option>
+                <option value="June">June</option>
+                <option value="July">July</option>
+                <option value="August">August</option>
+                <option value="September">September</option>
+                <option value="October">October</option>
+                <option value="November">November</option>
+                <option value="December">December</option>
+
+              </select> 
+            <!-- <td>Month</td><td><input type="text" name="month"></td> -->
+        </tr>
+        <br>
+        <tr>
+            <select id="year" name="year" class="form-control">
+                {% for year in range %}
+                <option value="{{year}}">{{year}}</option>
+                {% endfor %}
+              </select>
+            <!-- <td>year</td><td><input type="text" name="year"></td> -->
+        </tr>
+        <br>
+        <tr>
+            <td><input type="submit" class="button"></td>
+            <!-- <td><input type="submit" class="btn btn-custom"></td> -->
+        </tr>
+    </table>
+</form>
+</body>
+{% endblock content %}
+<!-- <form action="{% url 'app:add_or_update_savings' member.id %}" method="POST">
     {% csrf_token %}
     <table>
         <tr>
@@ -18,22 +127,69 @@
                 <option value="November">November</option>
                 <option value="December">December</option>
 
-              </select>
+              </select> -->
             <!-- <td>Month</td><td><input type="text" name="month"></td> -->
-        </tr>
+        <!-- </tr>
         <br><br>
         <tr>
             <select id="year" name="year" style="width:150px">
                 {% for year in range %}
                 <option value="{{year}}">{{year}}</option>
                 {% endfor %}
-              </select>
+              </select> -->
             <!-- <td>year</td><td><input type="text" name="year"></td> -->
-        </tr>
+        <!-- </tr>
         <br><br>
         <tr>
             
             <td><input type="submit"></td>
         </tr>
     </table>
-</form>
+</form> -->
+<!-- 
+<div class="location">
+    <div class="container">
+      
+    <div class="row" >
+    <div class="col-lg-5">
+        <div class="location-form">
+            <h3>{{member.name}}</h3>
+            <form action="{% url 'app:add_or_update_savings' member.id %}" method="POST">
+                {% csrf_token %}
+                <div class="control-group">
+                    <select id="month" name="month" class="form-control" >
+                        <option value="January">January</option>
+                        <option value="February">February</option>
+                        <option value="March">March</option>
+                        <option value="April">April</option>
+                        <option value="May">May</option>
+                        <option value="June">June</option>
+                        <option value="July">July</option>
+                        <option value="August">August</option>
+                        <option value="September">September</option>
+                        <option value="October">October</option>
+                        <option value="November">November</option>
+                        <option value="December">December</option>
+        
+                      </select>
+                </div>
+                <div class="control-group">
+                    <select id="year" name="year"  class="form-control">
+                        {% for year in range %}
+                        <option value="{{year}}">{{year}}</option>
+                        {% endfor %}
+                      </select>
+                </div>
+                
+                <div>
+                    <button class="btn btn-custom" type="submit">Send Request</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    </div>
+    
+    </div>
+    </div> -->
+    
+    
