--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -27,57 +27,23 @@
 
     <body>
         <!-- Top Bar Start -->
-        <div class="top-bar">
+        <!-- <div class="top-bar">
             <div class="container">
+                
                 <div class="row align-items-center">
+                   
                     <div class="col-lg-4 col-md-12">
-                        <div class="logo">
-                            <a href="index.html">
-                                <h1>Auto<span>Wash</span></h1>
-                                <!-- <img src="img/logo.jpg" alt="Logo"> -->
-                            </a>
-                        </div>
+                       
+                                
+                                <h1 style="color: #E81C2E;font-size: 50px;line-height: 60px;font-weight: 800;letter-spacing: 1px;font-style: italic;">Navayuga</h1>
+                           
                     </div>
-                    <div class="col-lg-8 col-md-7 d-none d-lg-block">
-                        <div class="row">
-                            <div class="col-4">
-                                <div class="top-bar-item">
-                                    <div class="top-bar-icon">
-                                        <i class="far fa-clock"></i>
-                                    </div>
-                                    <div class="top-bar-text">
-                                        <h3>Opening Hour</h3>
-                                        <p>Mon - Fri, 8:00 - 9:00</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <div class="top-bar-item">
-                                    <div class="top-bar-icon">
-                                        <i class="fa fa-phone-alt"></i>
-                                    </div>
-                                    <div class="top-bar-text">
-                                        <h3>Call Us</h3>
-                                        <p>+012 345 6789</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <div class="top-bar-item">
-                                    <div class="top-bar-icon">
-                                        <i class="far fa-envelope"></i>
-                                    </div>
-                                    <div class="top-bar-text">
-                                        <h3>Email Us</h3>
-                                        <p>info@example.com</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                           
+                
                 </div>
+            
             </div>
-        </div>
+        </div> -->
         <!-- Top Bar End -->
 
         <!-- Nav Bar Start -->
@@ -91,10 +57,10 @@
 
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
-                            <a href="{% url 'app:startpage'%}" class="nav-item nav-link active">Home</a>
-                            <a href="{% url 'app:index' %}" class="nav-item nav-link">Index</a>
-                            <a href="{% url 'app:savings_of_intended_month'%}" class="nav-item nav-link">Savings</a>
-                            <a href="price.html" class="nav-item nav-link">Price</a>
+                            <a href="{% url 'app:startpage'%}" class="nav-item nav-link active" style="font-size: 30px;">ഹോം &emsp;</a>
+                            <a href="{% url 'app:index' %}" class="nav-item nav-link" style="font-size: 30px;">സമ്പാദ്യം ചേർക്കുക &emsp;</a>
+                            <a href="{% url 'app:savings_of_intended_month'%}" class="nav-item nav-link"  style="font-size: 30px;">സമ്പാദ്യം കാണാൻ</a>
+                            <!-- <a href="price.html" class="nav-item nav-link">Price</a>
                             <a href="location.html" class="nav-item nav-link">Washing Points</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -106,10 +72,10 @@
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div>
-                        <div class="ml-auto">
+                        </div> -->
+                        <!-- <div class="ml-auto">
                             <a class="btn btn-custom" href="#">Get Appointment</a>
-                        </div>
+                        </div> -->
                     </div>
                 </nav>
             </div>
@@ -156,7 +122,7 @@
                             <a href="">FQAs</a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <!-- <div class="col-lg-3 col-md-6">
                         <div class="footer-newsletter">
                             <h2>Newsletter</h2>
                             <form>
@@ -165,7 +131,7 @@
                                 <button class="btn btn-custom">Submit</button>
                             </form>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="container copyright">
